--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -1,24 +1,22 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import { graphQLClient } from "../services/graphql";
-import type { HeadlineType } from "../types";
-import { headlinesQuery } from "../queries/HeadlinesQuery";
 import { blogPostUrl } from "../services/url";
 import Main from "../components/Main.astro";
+import { getHeadlines } from "../services/blog";
+import { formatDatePretty } from "../services/date";
+import { getPreachings } from "../services/pexu";
+import Preachings from "../components/Preachings";
 
-const headlines = await graphQLClient.request<{
-  blogPostCollection: {
-    total: number;
-    items: HeadlineType[];
-  };
-}>(headlinesQuery, {
-  limit: 6,
-});
+const headlines = await getHeadlines(5, false);
+
+const preachings = await getPreachings();
 ---
 
 <Layout title="Pekkis.dev">
   <Main>
     <h1>Peksun blogi</h1>
+
+    <h2>Plokautukset</h2>
     <ul>
       {
         headlines.blogPostCollection.items.map((post) => (
@@ -26,12 +24,16 @@ const headlines = await graphQLClient.request<{
             <a href={blogPostUrl(post)}>
               <h2>{post.title}</h2>
             </a>
-            <time>{post.date}</time>
+            <time>{formatDatePretty(post.date)}</time>
             <p>{post.ingress}</p>
           </li>
         ))
       }
     </ul>
+
+    <h2>Saarnaloiset</h2>
+
+    <Preachings videos={preachings} client:load />
   </Main>
 </Layout>
 
